--- a/src/app/call-leads/call-leads.component.css
+++ b/src/app/call-leads/call-leads.component.css
@@ -35,12 +35,89 @@
 width: 100%;
   }
 
-  .unassignedLeads{
-    margin-left : 350px ;border-width: 50px ; width: 250px; height: 400px; 
-    background-color :white ; border-radius:10px ; position: absolute; margin-top: 30px; 
-    padding-left: 20px; padding-top: 25px;
+  .drawerContent{
+    display: flex; border-radius: 5px; margin: 5px; padding: 10px; background-color: rgba(134, 134, 243, 0.699); color: #1968b3ff;
   }
 
+  .drawerContentNot{
+    display: flex; border-radius: 5px; margin: 5px; padding: 10px; background-color: beige; color: #1968b3ff;
+  }
+
+  
+  .unassignedLeads{
+    margin-left : 350px ;border-width: 50px ; width: 225px; height: 425px; 
+    background-color :white ; border-radius:10px ; position: absolute; margin-top: 10px; 
+    padding-left: 20px; padding-top: 20px;
+   
+    padding: 10px;
+    box-shadow:  .5px .5px 5px grey;
+  }
+  
+  
+  .formarea{
+    margin-left : 650px ;border-width: 50px ; width: 650px; height: 260px; 
+    background-color :white ; border-radius:10px ; position: absolute; margin-top: 10px; 
+    padding-left: 20px; padding-top: 25px;
+   
+    padding: 10px;
+    box-shadow:  .5px .5px 5px grey;
+  }
+  
+  .formarea2{
+    margin-left : 650px ;border-width: 50px ; width: 650px; height: 150px; 
+    background-color :white ; border-radius:10px ; position: absolute; margin-top: 330px; 
+    padding-left: 20px; padding-top: 25px;
+   
+    padding: 10px;
+    box-shadow:  .5px .5px 5px grey;
+  }
+
+  .formarea3{
+    margin-left : 650px ;border-width: 50px ; width: 670px; height: auto; 
+    background-color :white ; border-radius:10px ; position: absolute; margin-top: 540px; 
+  
+   
+    margin-bottom: 300px;
+   
+
+    box-shadow:  .5px .5px 5px grey;
+  }
+
+  .formarea4{
+ right : 10px ; width: 250px; background-color: #efefef;
+ height: auto ;
+
+    border-radius:10px ; position: absolute; top:.1px ;
+    padding-left: 20px; padding-top: 5px;
+   
+   
+  }
+
+.fitem{
+  color: red;
+  height: auto;
+  background-color: #efefef;
+}
+
+
+  .formarea5{
+    margin-left : 650px ;width: 670px; height: 300px; 
+    margin-top: 760px;
+    
+    background-color :#efefef ; 
+  }
+
+.card{
+
+  border-radius: 5px;
+  background-color: white;
+  box-shadow: .5px .5px 3px grey, -.5px .5px 3px grey;
+  width: 300px;
+  height: 200px;
+  margin: 20px;
+
+}
+  
 
   .example-headers-align .mat-expansion-panel-header-title,
   .example-headers-align .mat-expansion-panel-header-description {
@@ -48,28 +125,80 @@ width: 100%;
   }
   
   .example-headers-align .mat-expansion-panel-header-description {
-    justify-content: space-between;
     align-items: center;
+    width: 100%;
+
   }
   
   .example-headers-align .mat-form-field + .mat-form-field {
-    margin-left: 8px;
+    margin-left: 2px;
   }
+
+  .mat-expansion-panel {
+    
+    /* box-shadow: none; */
+    /* background:transparent; */
+
+    
+    /* max-width: 400px; */
+    width: 100%;
+  
+  }
+
+  .mat-expansion-panel  .insights{
+    
+    box-shadow: none;
+    background-color: green;
+    /* max-width: 400px; */
+    width: 100%;
+    top:1px;
+  
+  }
+
+  .mat-expansion-panel:not(.mat-expanded) .mat-expansion-panel-header:not([aria-disabled='true']):hover  {  
+     background-color: transparent}
+
 
   ::ng-deep .mat-form-field-outline-start {
     border-radius: 28px 0 0 28px !important;
     min-width: 28px !important;
     background-color: white;
     max-width: 60px;
+    
   }
   
+ 
+
   ::ng-deep .mat-form-field-outline-end {
     background-color: white;
     border-radius: 0 28px 28px 0 !important;
     max-width: 100%;
-  }
-
-  ::ng-deep .mat-form-field{
-    border-color: white;
 
   }
+
+ 
+  ::ng-deep .mat-form-field.mat-form-field-focused .mat-input-element  {
+    
+        color: black;
+    }
+
+    ::ng-deep .mat-form-field.mat-focused .mat-form-field-label {
+      color: black
+   }
+    ::ng-deep .mat-form-field.mat-focused .mat-form-field-ripple {
+      background-color: black
+   }
+    ::ng-deep .mat-form-field.mat-focused .mat-form-field-required-marker {
+      color: black
+   }
+    ::ng-deep .mat-form-field.mat-focused .mat-input-element {
+      color: black;
+   }
+    
+   ::ng-deep .mat-form-field.mat-focused .mat-form-field-outline {
+    color: black;
+    }
+
+    ::ng-deep .mat-form-field.mat-focused .mat-form-field-cursor {
+      color: black;
+      }
