--- a/src/app/call-leads/call-leads.component.html
+++ b/src/app/call-leads/call-leads.component.html
@@ -47,50 +47,53 @@
         
         
             <span class="example-spacer"></span>
-
-        <div class="formarea4">
-            <mat-accordion class="example-headers-align" multi>
-              <mat-expansion-panel style="position: absolute; z-index: 3; right: 10px; top: 10px; height: auto; " >
-                <mat-expansion-panel-header>
-               <div style="display: flex;flex-direction: column; flex:1 1 auto; font-size: 14px;">
-                   <div class="fitem" >
-                  <mat-panel-title style="padding-left: 5px; margin: 0px;">
-                                Username   
-                  </mat-panel-title>
+            <div class="formarea4">
+              <mat-accordion class="example-headers-align" multi>
+                <mat-expansion-panel style="position: absolute; z-index: 3; right: 10px; top: 10px; height: auto; " >
+                  <mat-expansion-panel-header>
+  
+                      <p style="position: absolute; top: 2px; margin:0; left: 10px;">Username </p>
+                      
+                      <p style="position: absolute; top: 18px; margin: 0; left: 10px; font-size: 12px;">user@email.com</p>
+                
+                     <!-- <div class="fitem" >
+                    <div style="padding-left: 0px;  font-size: 14px;">
+                                 <p style="padding-top:0px; margin: 0;"> Username </p>   
                     </div>
-
-                  <div class="fitem">
-                    <mat-panel-description  style="padding-left: 5px ; margin: 0px;" >
-                     
-                      user@email.com
-                     
-                    </mat-panel-description>
-                 
-                  </div>
-                </div>
-                   <!-- <mat-icon style="padding-top : 10px; padding-right: 10px;">account_circle</mat-icon> -->
+                      </div>
+  
+                    <div class="fitem">
+                      <div  style="padding-left: 0px ; margin-bottom: 12px;" >
+                       
+                        <p style="padding-top: 10px; margin: 0;">user@email.com</p>
+                       
+                      </div>
+                   
+                    </div> -->
                 
-                </mat-expansion-panel-header>
-
-                <div style=" width: 94%; background-color: #efefef; padding: 5px; padding-right: 0px;" >
+                     <!-- <mat-icon style="padding-top : 10px; padding-right: 10px;">account_circle</mat-icon> -->
                   
-                  <a  href="#" style="text-decoration: none; color: black; ">
-                  <p>Change Password</p>
-                  </a>
-                  
-                  <a  href="#" style="text-decoration: none; color: black; "> 
-                    <p >Logout</p>
+                  </mat-expansion-panel-header>
+  
+                  <div style=" height: 40px;   padding: 0px; padding-right: 0px;" >
+                    
+                    <a  href="#" style="text-decoration: none; color: black; ">
+                    <p style="position: absolute; left: 10px;margin: 0px; top: 50px;">Change Password</p>
                     </a>
-                
+                    
+                    <a  href="#" style="text-decoration: none; color: black; "> 
+                      <p style="position: absolute; left: 10px;margin: 0px; top: 80px;">Logout</p>
+                      </a>
                   
-                 
-                
-                </div>
-
-              </mat-expansion-panel>
-           </mat-accordion>
-        </div>
-
+                    
+                   
+                  
+                  </div>
+  
+                </mat-expansion-panel>
+             </mat-accordion>
+          </div>
+  
 
           </mat-toolbar>
         
@@ -198,7 +201,7 @@
                       
                        
                        <p style="display:inline-block; top:0px">Rs.7.2/unit</p>
-                       <button mat-icon-button (click)="onClickInfo()">  <mat-icon style="color: blue;" >info</mat-icon>  </button>
+                       <button mat-icon-button (click)="onClickInfo()">  <mat-icon style="color: #1b71c3;" >info</mat-icon>  </button>
                       
                 
                      </div>
@@ -209,7 +212,7 @@
 
                   <div style="display: flex;">
                     <div class="card"> 
-                    <p style="background-color: blue; color: white; padding: 10px; box-shadow: .1px -1px 5px grey; border-radius: 5px 5px 0 0; height: 20px;">Off-grid</p>
+                    <p style="background-color: #003e83; color: white; padding: 10px; box-shadow: .1px -1px 5px grey; border-radius: 5px 5px 0 0; height: 20px;">Off-grid</p>
                     
                   <div style="display: flex; flex-direction: row;">
                 
@@ -243,7 +246,7 @@
 
 
                     <div class="card"> 
-                      <p style="background-color: blue; color: white; padding: 10px;  border-radius: 5px 5px 0 0;  height: 20px;">Grid-tied</p>
+                      <p style="background-color: #003e83; color: white; padding: 10px;  border-radius: 5px 5px 0 0;  height: 20px;">Grid-tied</p>
                     
                       <div style="display: flex; flex-direction: row;">
                 
