--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 
 
-<app-call-leads></app-call-leads>
+ 
+    <app-call-leads *ngIf="isCallLeads&&!isLeadsList" ></app-call-leads>
+ 
+
+ 
+    <app-leads-list *ngIf="isLeadsList&&!isCallLeads"></app-leads-list>
+
+ 
