--- a/src/app/leads-list/leads-list.component.scss
+++ b/src/app/leads-list/leads-list.component.scss
@@ -36,11 +36,11 @@ width: 100%;
   }
 
   .drawerContent{
-    display: flex; border-radius: 5px; margin: 5px; padding: 10px; background-color: rgba(134, 134, 243, 0.699); color: #1968b3ff;
+    display: flex; border-radius: 5px; margin: 5px; padding: 10px; background-color: #cfe2f3; color: #1968b3ff;
   }
 
   .drawerContentNot{
-    display: flex; border-radius: 5px; margin: 5px; padding: 10px; background-color: beige; color: #1968b3ff;
+    display: flex; border-radius: 5px; margin: 5px; padding: 10px; background-color: white; color: #1968b3ff;
   }
 
   
@@ -84,19 +84,21 @@ width: 100%;
   }
 
   .formarea4{
- right : 10px ; width: 250px; background-color: #efefef;
+ right : 130px ; min-width: 250px; background-color: #efefef;
+ max-width: auto;
  height: auto ;
 
     border-radius:10px ; position: absolute; top:.1px ;
-    padding-left: 20px; padding-top: 5px;
+   padding-top: 5px;
    
    
   }
 
 .fitem{
-  color: red;
-  height: auto;
-  background-color: #efefef;
+  color: black;
+  margin: 0.1px;
+  padding: 0;
+  
 }
 
 
@@ -125,7 +127,7 @@ width: 100%;
   }
   
   .example-headers-align .mat-expansion-panel-header-description {
-    align-items: center;
+    
     width: 100%;
 
   }
@@ -176,7 +178,48 @@ width: 100%;
 
   }
 
+ .tablearea{
+     height: auto;
+     width: 950px;
+     box-shadow: .5px .5px 5px grey;
+     background-color: white;
+     border-radius: 5px;
+     margin-left: 330px;
+     padding: 30px;
+ }
+
+ table {
+    width: 100%;
+    
+  }
+
+  .mat-cell,
+  .mat-header-cell {
+    word-wrap: initial;
+    display: table-cell;
+    padding: 0px 5px;
+    line-break: unset;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    vertical-align: middle;
+  }
+  
+  .mat-row,
+  .mat-header-row {
+    display: table-row;
+  }
+  
+  .mat-radio-button ~ .mat-radio-button {
+    margin-left: 16px;
+  }
+  
+  .mat-form-field {
+    font-size: 14px;
+    width: 100%;
+  }
  
+
   ::ng-deep .mat-form-field.mat-form-field-focused .mat-input-element  {
     
         color: black;
